<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.helloworld.kenny.coupletones.MapsActivity"
            tools:layout="@layout/abc_list_menu_item_checkbox"
            android:layout_alignParentTop="true" />


        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="300dp"
            android:layout_height="62dp">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="220dp"
                android:layout_height="34dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="14dp"
                android:background="@color/colorTranslucentGrey"
                android:hint="Search Location"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:textColor="@android:color/black" />
            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="18dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:src="@drawable/search"
                android:background="@color/colorTranslucentGrey"
                android:contentDescription="search"
                android:onClick="buttonSearch"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/left_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/white" >

        <LinearLayout
            android:id="@+id/left_drawer_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/remove_partner"
                        android:layout_width="75dp"
                        android:textSize="11sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="5dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:text="Remove Partner"
                        android:onClick="buttonRemovePartner"
                        android:visibility="gone"/>
                    <Button
                        android:id="@+id/add_partner"
                        android:layout_width="75dp"
                        android:textSize="11sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="5dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:text="Add Partner"
                        android:onClick="buttonAddPartner" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/get_history"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="10sp"
                        android:layout_marginRight="5dp"
                        android:text="Get History"
                        android:backgroundTint="@color/colorSecondary"
                        android:onClick="buttonHistory"/>
                    <Button
                        android:id="@+id/get_favorites"
                        android:layout_width="75dp"
                        android:textSize="10sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="5dp"
                        android:text="Get Favorites"
                        android:backgroundTint="@color/colorSecondary"
                        android:onClick="buttonFavorites"/>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ListView android:id="@+id/left_listFavorite"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:background="#FFF"/>
                <ListView android:id="@+id/left_listHistory"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:background="#FFF"/>
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@drawable/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/right_drawer_view">

                <Button
                    android:id="@+id/register_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="5dp"
                    android:text="Register Email"
                    android:backgroundTint="@color/colorSecondary"
                    android:onClick="buttonRegisterEmail"
                    android:nestedScrollingEnabled="true" />

                <Button
                    android:id="@+id/unregister_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="5dp"
                    android:text="Unregister Email"
                    android:backgroundTint="@color/colorSecondary"
                    android:onClick="buttonUnregisterEmail"
                    android:nestedScrollingEnabled="true" />

                <Button
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="5dp"
                    android:text="Settings"
                    android:backgroundTint="@color/colorSecondary"
                    android:onClick="buttonSettings"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>

            <ListView
                android:id="@+id/right_drawer"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:background="#FFF">
            </ListView>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>

