<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/tone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:text="Play Tone"
        android:checked="true"
        android:enabled="true" />

    <CheckBox
        android:id="@+id/vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:gravity="center"
        android:text="Play Vibration"
        android:checked="true"
        android:enabled="true"/>

</LinearLayout>