<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/partner_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Partner Email"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp"
        />


</LinearLayout>